Fix description line spacing

--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,7 @@
 }
 
 #descripcion{
-	letter-spacing: -0.5px;
+	letter-spacing: -1px;
 	text-align: center;
 	line-height: 1.5;
 }
